--- a/index.html
+++ b/index.html
@@ -1,12 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buzz Quizz</title>
-</head>
-<body>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Exercício</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <script defer src="assets/js/script.js"></script>
+    <script defer src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+  </head>
+  <body>
+    <header>
+      <h1>BuzzQuizz</h1>
+    </header>
+    <main>
+      <div class="screen-1">
+        <div class="no-quizzes ">
+          <h2>Você não criou nenhum quizz ainda :(</h2>
+          <button onclick="createQuizz()">Criar Quizz</button>
+        </div>
+        <div class="your-quizzes none">
+          <div class="add-quizz">
+            <h2>Seus quizzes</h2>
+            <button onclick="createQuizz()"><ion-icon name="add-circle"></ion-icon></button>
+          </div>
+          <ul>
+            <li><div class="quizz-background">Acerte os personagens corretos dos Simpsons e prove seu amor!</div></li>
+            <li><div class="quizz-background">Acerte os personagens corretos dos Simpsons e prove seu amor!</div></li>
+            <li><div class="quizz-background">Acerte os personagens corretos dos Simpsons e prove seu amor!</div></li>
+            <li><div class="quizz-background">Acerte os personagens corretos dos Simpsons e prove seu amor!</div></li>
+            <li><div class="quizz-background">Acerte os personagens corretos dos Simpsons e prove seu amor!</div></li>
+            <li><div class="quizz-background">Acerte os personagens corretos dos Simpsons e prove seu amor!</div></li>
+          </ul>
+        </div>
+        <div class="all-quizzes">
+          <h2>Todos os quizzes</h2>
+          <ul>
+            <li><div class="quizz-background">Acerte os personagens corretos dos Simpsons e prove seu amor!</div></li>
+            <li><div class="quizz-background">Acerte os personagens corretos dos Simpsons e prove seu amor!</div></li>
+            <li><div class="quizz-background">Acerte os personagens corretos dos Simpsons e prove seu amor!</div></li>
+            <li><div class="quizz-background">Acerte os personagens corretos dos Simpsons e prove seu amor!</div></li>
+            <li><div class="quizz-background">Acerte os personagens corretos dos Simpsons e prove seu amor!</div></li>
+            <li><div class="quizz-background">Acerte os personagens corretos dos Simpsons e prove seu amor!</div></li>
+          </ul>
+        </div>
+      </div>
+      <div class="screen-2 none"></div>
+      <div class="screen-3 none">
+          <div class="form-01">
+              <h2>Comece pelo começo</h2>
+              <div class="quizz-infos">
+                <div class="info-1"><input type="text" placeholder="Título do seu quizz"></div>
+                <div class="info-2"><input type="text" placeholder="URL da imagem do seu quizz"></div>
+                <div class="info-3"><input type="text" placeholder="Quantidade de perguntas do quizz"></div>
+                <div class="info-4"><input type="text" placeholder="Quantidade de níveis do quizz"></div>
+              </div>
+              <button onclick="validateForm01()">Prosseguir pra criar perguntas</button>
+          </div>
+          <div class="form-02 none"></div>
+          <div class="form-03 none"></div>
+      </div>
+    </main>
     
-</body>
+  </body>
 </html>
