feat: quizz display

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>BuzzQuizz</h1>
     </header>
     <main>
-      <div class="screen-1">
+      <div class="screen-1 none">
         <div class="no-quizzes ">
           <h2>Você não criou nenhum quizz ainda :(</h2>
           <button onclick="createQuizz()">Criar Quizz</button>
@@ -51,8 +51,8 @@
         </div>
       </div>
       <div class="screen-2 none"></div>
-      <div class="screen-3 none">
-          <div class="form-01">
+      <div class="screen-3">
+          <div class="form-01 none">
               <h2>Comece pelo começo</h2>
               <div class="quizz-infos">
                 <div class="info-1"><input type="text" placeholder="Título do seu quizz"></div>
@@ -62,7 +62,86 @@
               </div>
               <button onclick="validateForm01()">Prosseguir pra criar perguntas</button>
           </div>
-          <div class="form-02 none"></div>
+          <div class="form-02">
+            <h2>Crie suas perguntas</h2>
+            <div class="question-closed q01 none">
+                <h2>Pergunta 1</h2>
+                <button onclick="selectedQuestion(this)"><ion-icon name="create-outline"></ion-icon></button>
+            </div>
+            <div class="question q01">
+                <div class="info-question">
+                    <h2>Pergunta 1</h2>
+                    <div class="text"><input type="text" placeholder="Texto da pergunta"></div>
+                    <div class="color"><input type="text" placeholder="Cor de fundo da pergunta"></div>
+                </div>
+                <div class="correct-answer">
+                    <h2>Resposta correta</h2>
+                    <div class="answer a01"><input type="text" placeholder="Resposta correta"></div>
+                    <div class="answer-img i01"><input type="text" placeholder="URL da imagem"></div>
+                </div>
+                <div class="incorrect-answers">
+                    <h2>Respostas incorretas</h2>
+                    <div class="answer a02"><input type="text" placeholder="Resposta incorreta 1"></div>
+                    <div class="answer-img i02"><input type="text" placeholder="URL da imagem 1"></div>
+                    <div class="answer a03"><input type="text" placeholder="Resposta incorreta 2"></div>
+                    <div class="answer-img i03"><input type="text" placeholder="URL da imagem 2"></div>
+                    <div class="answer a04"><input type="text" placeholder="Resposta incorreta 3"></div>
+                    <div class="answer-img i04"><input type="text" placeholder="URL da imagem 3"></div>
+                </div>
+            </div>
+            <div class="question-closed q02">
+                <h2>Pergunta 2</h2>
+                <button onclick="selectedQuestion(this)"><ion-icon name="create-outline"></ion-icon></button>
+            </div>
+            <div class="question q02 none">
+                <div class="info-question">
+                    <h2>Pergunta 2</h2>
+                    <div class="text"><input type="text" placeholder="Texto da pergunta"></div>
+                    <div class="color"><input type="text" placeholder="Cor de fundo da pergunta"></div>
+                </div>
+                <div class="correct-answer">
+                    <h2>Resposta correta</h2>
+                    <div class="answer a01"><input type="text" placeholder="Resposta correta"></div>
+                    <div class="answer-img i01"><input type="text" placeholder="URL da imagem"></div>
+                </div>
+                <div class="incorrect-answers">
+                    <h2>Respostas incorretas</h2>
+                    <div class="answer a02"><input type="text" placeholder="Resposta incorreta 1"></div>
+                    <div class="answer-img i02"><input type="text" placeholder="URL da imagem 1"></div>
+                    <div class="answer a03"><input type="text" placeholder="Resposta incorreta 2"></div>
+                    <div class="answer-img i03"><input type="text" placeholder="URL da imagem 2"></div>
+                    <div class="answer a04"><input type="text" placeholder="Resposta incorreta 3"></div>
+                    <div class="answer-img i04"><input type="text" placeholder="URL da imagem 3"></div>
+                </div>
+            </div>
+            <div class="question-closed q03">
+                <h2>Pergunta 3</h2>
+                <button onclick="selectedQuestion(this)"><ion-icon name="create-outline"></ion-icon></button>
+            </div>
+            <div class="question q03 none">
+                <div class="info-question">
+                    <h2>Pergunta 3</h2>
+                    <div class="text"><input type="text" placeholder="Texto da pergunta"></div>
+                    <div class="color"><input type="text" placeholder="Cor de fundo da pergunta"></div>
+                </div>
+                <div class="correct-answer">
+                    <h2>Resposta correta</h2>
+                    <div class="answer a01"><input type="text" placeholder="Resposta correta"></div>
+                    <div class="answer-img i01"><input type="text" placeholder="URL da imagem"></div>
+                </div>
+                <div class="incorrect-answers">
+                    <h2>Respostas incorretas</h2>
+                    <div class="answer a02"><input type="text" placeholder="Resposta incorreta 1"></div>
+                    <div class="answer-img i02"><input type="text" placeholder="URL da imagem 1"></div>
+                    <div class="answer a03"><input type="text" placeholder="Resposta incorreta 2"></div>
+                    <div class="answer-img i03"><input type="text" placeholder="URL da imagem 2"></div>
+                    <div class="answer a04"><input type="text" placeholder="Resposta incorreta 3"></div>
+                    <div class="answer-img i04"><input type="text" placeholder="URL da imagem 3"></div>
+                </div>
+            </div>
+            <button onclick="validateForm02()">Prosseguir pra criar níveis</button>
+          </div>
+            
           <div class="form-03 none"></div>
       </div>
     </main>
