feat: quizz answers

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
     </header>
 
     <div class="quizz-banner none">
-        <div>
-            Título teste de um Quizz
-        </div>
+        <div></div>
     </div>
 
     <main>
