feat: quizz creation - quizz success

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
-
-    <script defer src="assets/js/script.js"></script>
-
+    <script defer src="./assets/js/script.js"></script>
   </head>
 
   <body>
@@ -29,7 +27,7 @@
     </div>
 
     <main>
-      <div class="screen-1 ">
+      <div class="screen-1">
         <div class="no-quizzes ">
           <h2>Você não criou nenhum quizz ainda :(</h2>
           <button onclick="createQuizz()">Criar Quizz</button>
@@ -59,9 +57,10 @@
       </div>
 
       <div class="screen-3 none">
-        <div class="form-01 "></div>
+        <div class="form-01 none"></div>
         <div class="form-02 none"></div>
         <div class="form-03 none"></div>
+        <div class="form-04 none"></div>
       </div>
 
     </main>
