feat: quizz reset

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       
       <div class="screen-2 none">
         <div class="quizz-container"></div>
+        <div class="final-container"></div>
       </div>
 
       <div class="screen-3 none">
