project fixes and data identifiers added

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       <div class="screen-1">
         <div class="no-quizzes ">
           <h2>Você não criou nenhum quizz ainda :(</h2>
-          <button onclick="createQuizz()">Criar Quizz</button>
+          <button onclick="createQuizz()" data-identifier="create-quizz">Criar Quizz</button>
         </div>
 
         <div class="your-quizzes none">
           <div class="add-quizz">
             <h2>Seus quizzes</h2>
-            <button onclick="createQuizz()"><ion-icon name="add-circle"></ion-icon></button>
+            <button onclick="createQuizz()" data-identifier="create-quizz"><ion-icon name="add-circle"></ion-icon></button>
           </div>
           <ul>
 
