feat: mobile layout

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
       <h1>BuzzQuizz</h1>
     </header>
 
-    <div class="quizz-banner none">
-        <div></div>
-    </div>
+    <!-- <div class="quizz-banner none">
+      <div></div>
+    </div> -->
 
     <main>
+
       <div class="loading-screen">
         <div class="spinner">
           <div class="load">
@@ -60,7 +61,11 @@
         </div>
 
       </div>
-      
+
+      <div class="quizz-banner none">
+        <div></div>
+      </div>
+
       <div class="screen-2 none">
         <div class="quizz-container"></div>
         <div class="final-container"></div>
