feat: quizz edit

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
 
     <header>
-      <h1>BuzzQuizz</h1>
+      <h1 onclick="window.location.reload()">BuzzQuizz</h1>
     </header>
 
     <!-- <div class="quizz-banner none">
